Fixed margin on mobile view

--- a/016_news-homepage/styles/style.scss
+++ b/016_news-homepage/styles/style.scss
@@ -20,6 +20,7 @@ body {
   @media screen and (max-width: 800px) {
     width: min(100% - 2rem);
     margin-top: 1.75rem;
+    margin-bottom: 1.75rem;
     overflow-x: hidden;
   }
 }
